plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.0.192'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
}

base {
    archivesName = "roostultimate_"+ minecraft_version + "_opt"
}
//base {
//    archivesName = "${project.mod_id}-${project.minecraft_version}"
//}
//jarJar.enable()

// Mojang ships Java 21 to end users starting in 1.20.5, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)
//compileJava.options.compilerArgs << "-Xlint:all,-classfile,-processing,-deprecation,-this-escape" << "-Werror"
minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')
//minecraft.accessTransformers.entry public net.minecraft.client.Minecraft textureManager # textureManager

// Default run configurations.
// These can be tweaked, removed, or duplicated as needed.
runs {
    // applies to all the run configs below
    configureEach {
        workingDirectory project.file('run')
        systemProperty 'forge.logging.console.level', 'debug'
        systemProperty 'fml.earlyprogresswindow', 'false'
        systemProperty 'mixin.env.disableRefMap', 'true'


        modSource project.sourceSets.main
    }

    client {
        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
        systemProperty 'forge.enabledGameTestNamespaces', "chicken_roost"
    }

    server {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        argument '--nogui'
    }

    // This run config launches GameTestServer and runs all registered gametests, then exits.
    // By default, the server will crash when no gametests are provided.
    // The gametest system is also enabled by default for other run configs under the /test command.
    gameTestServer {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
    }

    data {
        // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
        // workingDirectory project.file('run-data')

        // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
        arguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}


repositories {
    // Put repositories for dependencies here
    // ForgeGradle automatically adds the Forge maven and Maven Central for you

    // If you have mod jar dependencies in ./libs, you can declare them as a repository like so:
    // flatDir {
    //     dir 'libs'
    // }
    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
    maven { url = "https://mvn.devos.one/snapshots" } // Registrate
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" } // ForgeConfigAPIPort

    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
    }

    exclusiveContent {
        forRepository {
            maven {
                url "https://cursemaven.com"
            }
        }
        filter {
            includeGroup "curse.maven"
        }
    }

    maven {
        url "https://maven.terraformersmc.com"
        content {
            includeGroup "com.terraformersmc"
            includeGroup "dev.emi"
        }
    }

    maven {
        url "https://maven2.bai.lol"
        content {
            includeGroup "lol.bai"
            includeGroup "mcp.mobius.waila"
        }
    }

    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }

    maven {
        name = "SquidDev"
        url = "https://maven.squiddev.cc"
        content {
            includeGroup "cc.tweaked"
        }
    }

    mavenCentral()
}



dependencies {



    implementation "net.neoforged:neoforge:${neo_version}"
     //implementation "net.neoforged:neoforge:${neo_version}"
    //implementation "curse.maven:azurelib-817423:4829907"
    implementation "curse.maven:geckolib-388172:5874016"
    //implementation(jarJar("curse.maven:geckolib-388172:5874016"))
    implementation "curse.maven:jade-324717:5884231"
    implementation "curse.maven:roughly-enough-items-310111:5846953"
    implementation "curse.maven:architectury-api-419699:5786327"
    implementation "curse.maven:cloth-config-348521:5729127"
    compileOnly "curse.maven:jei-238222:5846880"
    compileOnly "curse.maven:applied-energistics-2-223794:5729094"
    compileOnly "curse.maven:emi-580555:5872513"
    implementation "curse.maven:kubejs-238086:5810100"
    implementation "curse.maven:rhino-416294:6000610"
    //compileOnly "curse.maven:mekanism-268560:6018306"
    //implementation "curse.maven:bucketlib-560156:5800757"
    compileOnly "curse.maven:xaeros-minimap-263420:6778051"
    compileOnly "curse.maven:xaeros-world-map-317780:6778114"
    implementation "curse.maven:just-dire-things-1002348:6369120"
    compileOnly "curse.maven:crafttweaker-239197:6434161"
    implementation "curse.maven:ender-io-64578:7204349"
    implementation "curse.maven:mekanism-268560:7132168"

    compileOnly("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    compileOnly("net.createmod.ponder:Ponder-NeoForge-${minecraft_version}:${ponder_version}")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")
    compileOnly("com.tterrag.registrate:Registrate:${registrate_version}")

    implementation "curse.maven:crlib-1425648:7531340"

    compileOnly("cc.tweaked:cc-tweaked-1.21.1-core-api:1.117.0")
    compileOnly("cc.tweaked:cc-tweaked-1.21.1-forge-api:1.117.0")

    compileOnly "curse.maven:silent-lib-242998:6565251"
    compileOnly "curse.maven:silents-gems-220311:6684027"


    compileOnly "curse.maven:oh-the-biomes-weve-gone-1070751:7040627"
    compileOnly "curse.maven:corgilib-693313:6808264"
    compileOnly "curse.maven:oh-the-trees-youll-grow-962544:6607561"
    compileOnly "curse.maven:terrablender-neoforge-940057:6054947"


    //implementation "curse.maven:spark-361579:5759671"
    //implementation("curse.maven:bucketlib-560156:5800757")
    //implementation(jarJar("curse.maven:bucketlib-560156:5800757"))
    //implementation "curse.maven:novacore-923669:5517735"
    //implementation "curse.maven:exnihilosequentia-400012:5517831"
    //implementation "curse.maven:bucketlib-560156:5800757"
    //implementation "curse.maven:immersive-engineering-231951:5828000"
    // compile against the API
    //compileOnly "mcp.mobius.waila:wthit-api:neo-${wthitVersion}"

    // run against the full jar
    //runtimeOnly "mcp.mobius.waila:wthit:neo-${wthitVersion}"
    //runtimeOnly "lol.bai:badpackets:neo-${badpacketsVersion}"
    //implementation "curse.maven:applied-energistics-2-223794:4922759"
	
	
    // Example optional mod dependency with JEI
    // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
    // compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
    // compileOnly "mezz.jei:jei-${mc_version}-neoforge-api:${jei_version}"
    // We add the full version to localRuntime, not runtimeOnly, so that we do not publish a dependency on it
    // localRuntime "mezz.jei:jei-${mc_version}-neoforge:${jei_version}"

    // Example mod dependency using a mod jar from ./libs with a flat dir repository
    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
    // The group id is ignored when searching -- in this case, it is "blank"
    // implementation "blank:coolmod-${mc_version}:${coolmod_version}"

    // Example mod dependency using a file as dependency
    // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")

    // Example project dependency using a sister or child project:
    // implementation project(":myproject")

    // For more info:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}



// Configure the 'jarJar' task
// 'all' is the default classifier
/*tasks.named('jarJar') {
    archiveClassifier = 'universal'
}*/